//file:noinspection GroovyAssignabilityCheck
plugins {
    id 'java'
}

group = 'net.liyze'
version = '1.0-SNAPSHOT'

repositories {
    maven {
        url "https://maven.aliyun.com/repository/public"
    }
    maven {
        url "https://maven.aliyun.com/repository/gradle-plugin"
    }
    mavenCentral()
}

dependencies {
    implementation 'org.jetbrains:annotations:24.0.0'
    implementation 'org.slf4j:slf4j-api:2.0.7'
    implementation 'ch.qos.logback:logback-classic:1.4.7'
    implementation 'org.apache.commons:commons-lang3:3.12.0'
    implementation 'org.smartboot.http:smart-http-server:1.2.1'
    implementation 'com.moandjiezana.toml:toml4j:0.7.2'
    implementation 'com.google.code.gson:gson:2.10.1'
    implementation 'jakarta.annotation:jakarta.annotation-api:2.1.1'
    implementation 'net.bytebuddy:byte-buddy:1.14.4'
    implementation 'com.zaxxer:HikariCP:5.0.1'
}
test {

}
sourceSets{
    java
}
jar{
    duplicatesStrategy = DuplicatesStrategy.INCLUDE
    from {
        configurations.compileClasspath.collect {
            it.isDirectory() ? it : zipTree(it)
        }
    }
    from("LICENSE")
    manifest {
        attributes 'Manifest-Version': '1.0'
        attributes 'Main-Class': 'net.liyze.basin.core.Main'
        attributes 'Class-Path': 'data/jars'
        attributes 'Created-By': 'Gradle 8'
        attributes 'Built-By': 'Liyze09'
        attributes 'Build-Jdk': Runtime.version().toString()
        attributes 'Export-Command': 'net.liyze.basin.core.InternalPluginDemo'
        attributes 'Boot-Class': 'net.liyze.basin.core.InternalPluginDemo'
    }
    exclude 'META-INF/**'
    exclude 'module-info.class'
}
java {
    withSourcesJar()
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}